chore: [#188526874] fix cta button spacing

--- a/web/src/styles/components/buttons.scss
+++ b/web/src/styles/components/buttons.scss
@@ -256,8 +256,7 @@
 }
 
 .usa-icon-button-margin {
-  width: 22px;
-  height: 22px;
+  min-width: 22px !important;
+  min-height: 22px !important;
   margin-left: 0.5rem;
-  margin-right: -0.5rem;
 }
